<resources>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="app_name">Flicks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="overview">Overview</string>
    <string name="sample_overview">The film follows four inter-connecting stories revolving around love, drugs and poverty in Philadelphia</string>
    <string name="release_date">Release Date</string>
    <string name="sample_release">Dec 31, 2017</string>
    <string name="rating">Rating</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="trailer_1">Trailer 1</string>
    <string name="_7_10">7/10</string>
    <string name="dummy_review">Dummy Review</string>
    <string name="na">NA!</string>
    <string name="error_1">Holy moly, we just blew a connection. Need..More..Signal..</string>
    <string name="error_2">Back in 20min, Rahul is on his way to the command center</string>
    <string name="hang_on">Hang On</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="content_authority">com.rahuljanagouda.popularmoviestwo</string>
    <string name="preference_file_key">PopularMoviesTwoSharedPref</string>
    <string name="last_sort_order">LastSortOrder</string>
    <string name="movie_details">Movie Details</string>
    <string name="no_favorites">No Favorites</string>
    <string name="batman_v_superman_dawn_of_justice">Batman v Superman: Dawn of justice</string>
    <string name="_7_5">7.5</string>
    <string name="_10">/10</string>
    <string name="release_date_label">Release Date</string>
    <string name="_23_march_2016">23 March 2016</string>
    <string name="discription">Discription</string>
    <string name="nothing_here">Nothing here</string>
    <string name="username">Username</string>
    <string name="pick_one">Pick one</string>


</resources>
